test/templates/errors/badformat.tmpl
<h1>${:error:code} - Page Not Available </h1>
<p> The page you are attempting to access is not available in the
format you requested it in. </p>
<p>You can see the page's normal form by following this link: @{linktonormal}</p>
